--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') no-repeat center center/cover;
   color: white;
@@ -19,7 +22,8 @@ body {
   padding: 2em;
   border-radius: 20px;
   max-width: 360px;
-  width: 90%;
+  max-height: 100vh
+  overflow-y: auto;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
 }
 
@@ -68,7 +72,6 @@ h1 {
   flex-direction: column;
   align-items: flex-start;
   margin: 0 auto;
-  padding-left: 5%;
   width: 100%;
   gap: 0.8em
 }
