--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   padding: 2em;
   border-radius: 20px;
   max-width: 360px;
-  max-height: 100vh
+  max-height: 100vh;
   overflow-y: auto;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
 }
