--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
   background: rgba(0, 0, 0, 0.65);
   padding: 2em;
   border-radius: 20px;
-  max-width: 360px;
+  max-width: 100vh;
+  max-height: 100vh;
   overflow-y: auto;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
