--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 100vh;
+  max-height: 100vh;
   overflow: hidden;
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') no-repeat center center/cover;
@@ -19,9 +19,10 @@ body {
 
 .container {
   background: rgba(0, 0, 0, 0.65);
+  max-width: 100vh;
+  max-height: 100vh;
   padding: 2em;
   border-radius: 20px;
-
   overflow-y: auto;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
