--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  max-width: 100vh;
-  max-height: 100vh;
+  height=100%;
   overflow: hidden;
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') no-repeat center center/cover;
@@ -19,7 +18,7 @@ body {
 
 .container {
   background: rgba(0, 0, 0, 0.65);
-  max-width: 100vh;
+  max-width: 360px;
   max-height: 100vh;
   padding: 2em;
   border-radius: 20px;
