--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  height=100%;
+  height: 100%;
   overflow: hidden;
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') no-repeat center center/cover;
