--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 .container {
   background: rgba(0, 0, 0, 0.65);
+  max-width: 360px;
   max-height: 100vh;
   padding: 2em;
   border-radius: 20px;
