--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   overflow: hidden;
+}
+
+
+body {
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') no-repeat center center/cover;
   color: white;
@@ -10,7 +14,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: left;
-  min-height: 100vh;
 }
 
 .poppins {
@@ -20,7 +23,6 @@ body {
 .container {
   background: rgba(0, 0, 0, 0.65);
   max-width: 360px;
-  max-height: 100vh;
   padding: 2em;
   border-radius: 20px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
