--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h1 {
 
 .position {
   font-size: 1.0em;
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
   font-weight: 600;
   margin-bottom: 1.2em;
   text-align: center;
@@ -83,11 +83,11 @@ h1 {
   justify-content: flex-start; 
   gap: 0.8em;
   font-size: 1.0em;
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
 }
 
 .contact-item a {
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
   text-decoration: none;
   text-align: left;
   width: fit-content;
