--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ body {
 
 .container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: rgba(0, 0, 0, 0.65);
   max-width: 360px;
   padding: 2em;
