--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 
 .container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.65);
@@ -32,11 +31,16 @@ body {
 }
 
 @media (max-width: 768px) {
+  html, body {
+    height: 100dvh;
+  }
+
   .container {
     height: 100dvh;
+    flex-direction: column;
     max-height: 100dvh;
     box-sizing: border-box;
-    justify-content: space-between;  /* optional for layout control */
+    justify-content: center;  /* optional for layout control */
   }
 
 .profile-image {
