--- a/style.css
+++ b/style.css
@@ -41,11 +41,10 @@ body {
 
   .container {
     height: 100dvh;
-    width: 100dvh;
+    width: 100vw;
     box-sizing: border-box;
     flex-direction: column;
-    max-height: 100dvh;
-    max-width: 100dvh;
+    max-width: none;
     justify-content: center;  /* optional for layout control */
   }
 }
