--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body {
     overflow-y: auto;
     height: 100dvh;
     padding: 2.0em;
+    margin: 1.0em;
+    box-sizing: border-box;
+    border-radius: 16px;
   }
 }
 
