--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
 
 .container {
   align-items: center;
+  max-height: 100%;
+  width: 100%
+  max-width: 360px;
   background: rgba(0, 0, 0, 0.65);
   display: flex;
   padding: 2em;
@@ -47,6 +50,11 @@ body {
 }
 
 @media (max-width: 768px) and (orientation: landscape) {
+  html, body {
+    height: 100dvh;
+    overflow: hidden;
+    
+  
   .container {
     overflow-y: auto;
     max-height: 100dvh;
