--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@ html, body {
   overflow: hidden;
 }
 
-body {
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
   font-family: Poppins, sans-serif;
   background: url('backgroundpic.jpg') center center / cover no-repeat;
+  z-index: -1;
   color: white;
   display: flex;
   justify-content: center;
@@ -39,8 +46,8 @@ body {
   .container {
     padding-top: calc(env(safe-area-inset-top, 0px) + 1.5em);
     padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1.5em);
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
     height: auto;
     max-height: 100dvh;
     overflow-y: auto;
