--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   max-width: 360px;
   width: 90%;
@@ -31,7 +31,28 @@ body {
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
   overflow-y: auto;
-  max-height: 100vh;
+  max-height: 100dvh;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding-top: calc(env(safe-area-inset-top, 0px) + 1.5em);
+    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1.5em);
+    padding-left: calc(env(safe-area-inset-left, 0px) + 1em);
+    padding-right: calc(env(safe-area-inset-right, 0px) + 1em);
+  }
+}
+
+@media (orientation: landscape) {
+  .container {
+    border-radius: 0;
+    width: 100vw;
+    height: 100dvh;
+    max-width: none;
+    max-height: none;
+    margin: 0;
+    padding: 2em;
+  }
 }
 
 .profile-image {
