--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-#background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  z-index: -1;
-  background: url('backgroundpic.jpg') center center / cover no-repeat;
-}
-
 html, body {
   height: 100vh;
   width: 100vw;
@@ -24,6 +14,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: left;
+  background: url('backgroundpic.jpg') center center / cover no-repeat;
 }
 
 .container {
@@ -42,34 +33,23 @@ body {
   overflow: hidden;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
   .body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
   .container {
     padding-top: calc(env(safe-area-inset-top, 0px) + 1.5em);
     padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1.5em);
     padding-left: calc(env(safe-area-inset-left, 0px) + 1em);
     padding-right: calc(env(safe-area-inset-right, 0px) + 1em);
-  }
-}
-
-@media (max-width: 768px) and (orientation: portrait) {
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container {
     margin-top: 0;
     margin-bottom: 0;
     height: auto;
-    max-height: 95dvh; /* Slight breathing room from URL bar */
+    max-height: 80dvh; /* Slight breathing room from URL bar */
     overflow-y: auto;
   }
   
@@ -78,23 +58,23 @@ body {
     height: 120px;
   }
 
-  h1 {
-    font-size: 1em;
+  .h1 {
+    font-size: 0.9em;
   }
 
   .subtitle, .position, .contact-item {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
 
   .download-button a {
-    font-size: 0.9em;
+    font-size: 0.8em;
     padding: 0.6em 1.2em;
   }
 }
   
 
 @media (max-width: 768px) and (orientation: landscape) {
-  body {
+  .body {
     justify-content: flex-start; /* scroll starts from top */
     align-items: flex-start;
   }
@@ -125,7 +105,7 @@ body {
   border-radius: 20px;
 }
 
-h1 {
+.h1 {
   font-size: 1.1em;
   margin: 0.2em 0;
   text-align: center;
