--- a/style.css
+++ b/style.css
@@ -34,7 +34,12 @@ body {
 }
 
 @media (max-width: 768px) and (orientation: portrait) {
-  .body {
+
+  html, body {
+    height: 100dvh;
+    overflow: hidden;
+  }
+  body {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,10 +47,7 @@ body {
   }
 
   .container {
-    padding-top: calc(env(safe-area-inset-top, 0px) + 1.5em);
-    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1.5em);
-    padding-left: calc(env(safe-area-inset-left, 0px) + 1em);
-    padding-right: calc(env(safe-area-inset-right, 0px) + 1em);
+    padding: 1.5em
     margin-top: 0;
     margin-bottom: 0;
     height: auto;
@@ -72,9 +74,8 @@ body {
   }
 }
   
-
 @media (max-width: 768px) and (orientation: landscape) {
-  .body {
+  body {
     justify-content: flex-start; /* scroll starts from top */
     align-items: flex-start;
   }
