--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ h1 {
   font-size: 1.2em;
   font-weight: 600;
   text-align: center;
-  margin: 0.3em 0 0.3em 0;
+  margin: 0.3em 0 0 0;
 }
 
 .subtitle {
