--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ h1 {
   font-size: 1.05em;
   color: white;
   font-weight: 600;
+  margin-top: 0.1em;
   margin-bottom: 1.0em;
   text-align: center;
 }
