--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
   width: 100vw;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -76,6 +77,7 @@ body {
   body {
     display: block;
     align-items: flex-start;
+    -webkit-overflow-scrolling: touch;
   }
 
   .container {
@@ -152,7 +154,7 @@ h1 {
 .divider {
   border: 0;
   border-top: 1px solid rgba(255, 255, 255, 1);
-  margin: 1.1em 0;
+  margin: 1.0em 0;
 }
 
 .contact-section {
