--- a/style.css
+++ b/style.css
@@ -70,10 +70,6 @@ body {
 
 /* Landscape (Scrollable Card, Top Aligned) */
 @media (max-width: 768px) and (orientation: landscape) {
-  html, body {
-  overflow-y: auto;
-  }
-  
   body {
     display: block;
     align-items: flex-start;
@@ -84,7 +80,7 @@ body {
     width: 100vw;
     height: auto;
     max-width: none;
-    max-height: 100dvh;
+    max-height: 100vh;
     border-radius: 0;
     padding: 2em 1.5em;
     overflow-y: auto;
