--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ html, body {
 
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: left;
   background: url('backgroundpic.jpg') center center / cover no-repeat;
   color: white;
@@ -27,9 +25,6 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  overflow: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -83,6 +78,7 @@ body {
     max-height: 100dvh;
     border-radius: 0;
     padding: 2em 1.5em;
+    overflow-x: auto;
     overflow-y: auto;
     box-sizing: border-box;
     display: block;
