--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
   display: flex;
   flex-direction: column;
   -webkit-overflow-scrolling: touch;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Portrait (iOS 16 Safe + Centered) */
