--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   color: white;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* Container Defaults (Desktop + Portrait) */
@@ -69,9 +70,12 @@ body {
 }
 
 /* Landscape (Scrollable Card, Top Aligned) */
-@media (max-width: 768px) and (orientation: landscape) and (max-height: 500px) {
+@media screen and (orientation: landscape) and (max-device-height: 500px) {
   body {
     display: block;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
   }
 
   .container {
