--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   text-align: left;
   background: url('backgroundpic.jpg') center center / cover no-repeat;
   color: white;
+  display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
@@ -27,6 +28,7 @@ body {
   box-sizing: border-box;
   flex-direction: column;
   -webkit-overflow-scrolling: touch;
+  display: flex;
   justify-content: flex-start;
   align-items: center;
   overflow-y: auto;
