--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 /* Container Defaults (Desktop + Portrait) */
 .container {
+  height: 100vh;
   width: 90%;
   max-width: 360px;
   padding: 1.2em;
