--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 html, body {
   height: 100dvh;
   width: 100vw;
-  margin: 0;
-  padding: 0;
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
 }
@@ -19,6 +17,7 @@ body {
 
 /* Container Defaults (Desktop + Portrait) */
 .container {
+  margin: 0.6em;
   height: auto;
   max-height: 90vh;
   width: 100%;
