--- a/style.css
+++ b/style.css
@@ -17,12 +17,11 @@ body {
 
 /* Container Defaults (Desktop + Portrait) */
 .container {
-  margin: 0.6em;
   height: auto;
   max-height: 90vh;
   width: 100%;
   max-width: 360px;
-  padding: 1.2em;
+  padding: 1.2em 0.6em;
   background: rgba(0, 0, 0, 0.65);
   border-radius: 20px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
