--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   flex-direction: column;
   -webkit-overflow-scrolling: touch;
   display: block;
+  justify-content: center;
   overflow-y: auto;
 }
 
