--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   -webkit-overflow-scrolling: touch;
   display: block;
   justify-content: center;
+  align-items: center;
   overflow-y: auto;
 }
 
