--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
 .profile-image {
   display: flex;
   justify-content: center;
-  margin: 0.6em 0;
+  margin: 0.6em 0.6em;
 }
 
 .profile-image img {
