--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h1 {
   font-size: 1.3em;
   font-weight: 600;
   text-align: center;
-  margin: 0.6em 0 0.6em 0;
+  margin: 0.6em 0 0 0;
 }
 
 .subtitle {
