--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
 
   h1 {
     font-size: 0.9em;
+    margin: 0.6em 0 0 0;
   }
 
   .subtitle, .position, .contact-item, .download-button a {
