--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 .profile-image {
   display: flex;
   justify-content: center;
-  margin: 0.6em 0.6em;
+  margin: 0;
 }
 
 .profile-image img {
