--- a/style.css
+++ b/style.css
@@ -63,7 +63,11 @@ body {
     margin: 0.6em 0 0 0;
   }
 
-  .subtitle, .position, .contact-item, .download-button a {
+  .position {
+    font-size: 0.9em;
+  }
+
+  .subtitle, .contact-item, .download-button a {
     font-size: 0.8em;
   }
 
@@ -119,7 +123,7 @@ body {
 .profile-image {
   display: flex;
   justify-content: center;
-  margin: 0;
+  margin: 0.6em 0.6em;
 }
 
 .profile-image img {
