--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ h1 {
 
 .icon-box {
   background-color: rgba(255, 255, 255, 0);
-  padding: 0.4em;
+  padding: 0;
   border-radius: 6px;
   display: inline-flex;
   align-items: center;
